--- a/tutorail/templates/base.html
+++ b/tutorail/templates/base.html
@@ -23,14 +23,17 @@
 
   <body>
 
-    <nav class="navbar bg-primary navbar-expand-md ">
+    <nav class="navbar bg-primary navbar-expand-md">
       <div class="container">
-        <div class="col-2 text-left pl-md-0">
+        <div class="col-4 text-left pl-md-0">
           <h3 class="text-white"> City Hospital </h3>
         </div>
+
         
-        <div
-          class="collapse navbar-collapse justify-content-center col-md-8 navbar-collapse-3">
+        <div class="collapse navbar-collapse col-8 justify-content-center  navbar-collapse-3">
+          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
           <ul class="navbar-nav justify-content-center  fw-bold">
             <li class="nav-item active">
               <a class="nav-link text-white" href="{% url 'home' %}">Home </a>
@@ -65,8 +68,8 @@
     
 	
 	
-    <section class="">
-      <footer class="pt-2 pb-2  bg-primary text-light">
+    <section class="" >
+      <footer class="pt-2 pb-2  bg-primary text-light mt-5">
         <div class="container">
           <div class="row align-items-center">
             <div class="col-12 col-md-8">
