--- a/tutorail/templates/booking.html
+++ b/tutorail/templates/booking.html
@@ -6,14 +6,14 @@
 {% endblock %}
 
 {% block body %}
-    <h1 class="text-center text-primary">Make an Appoinment</h1>
+    <h1 class="text-center text-info">Make an Appoinment</h1>
     <hr>
     <div class="container-fluid my-5 p-3" style="margin-left:10%; width:30rem">
         <form method="POST">
             {% csrf_token %}
             {{form|crispy}}
             <br>
-            <button class="btn btn-primary mb-4" type="submit">submit</button>
+            <button class="btn btn-primary mb-4" type="submit" onclick="alert('Booking Confirmed')">Submit</button>
             <br>
         </form>
     </div>
