--- a/tutorail/templates/contact.html
+++ b/tutorail/templates/contact.html
@@ -9,7 +9,7 @@
 
     <div class="container-fluid" style="width:60%">
     <!--Section heading-->
-    <h1 class="h1-responsive text-primary font-weight-bold text-center ">Contact us</h1>
+    <h1 class="h1-responsive text-info font-weight-bold text-center ">Contact us</h1>
     <!--Section description-->
     <hr>
     <p class="text-center w-responsive mx-auto mb-5">Do you have any questions? Please do not hesitate to contact us directly. Our team will come back to you within
