--- a/tutorail/templates/doctor.html
+++ b/tutorail/templates/doctor.html
@@ -5,7 +5,7 @@
 {% endblock %}
 
 {% block body %}
-    <h1 class="text-center text-primary">Doctors </h1>
+    <h1 class="text-center text-info">Doctors </h1>
     <hr>
     <div class="container text-center" style="margin-bottom:18rem">
     {% for d in doctors %}
