--- a/tutorail/templates/about.html
+++ b/tutorail/templates/about.html
@@ -5,7 +5,7 @@
 {% endblock %}
 
 {% block body %}
-    <h1 class="text-center text-primary">About Us</h1>
+    <h1 class="text-center text-info">About Us</h1>
     <hr>
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.1/css/all.min.css" integrity="sha256-2XFplPlrFClt0bIdPgpz8H7ojnk10H69xRqd9+uTShA=" crossorigin="anonymous" />
 <div class="container"  style="margin-bottom:70px">
