--- a/tutorail/templates/base.html
+++ b/tutorail/templates/base.html
@@ -27,7 +27,7 @@
 
   <body>
 
-    <nav class="navbar navbar-expand-lg navbar-light bg-primary" style="margin-bottom:0px;">
+    <nav class="navbar navbar-expand-lg navbar-light bg-info" style="margin-bottom:0px;">
       <div class="container">
         <div class="col-6 col-md-6  pl-md-0" >
           <h2 class="text-white"> City Hospital </h2>
@@ -74,7 +74,7 @@
 	
 	
     <section class="" >
-      <footer class="pt-2 pb-2  bg-primary text-light">
+      <footer class="pt-2 pb-2  bg-info text-light">
         <div class="container">
           <div class="row align-items-center">
             <div class="col-12 col-md-8">
