--- a/tutorail/templates/department.html
+++ b/tutorail/templates/department.html
@@ -5,7 +5,7 @@
 {% endblock %}
 
 {% block body %}
-    <h1 class="text-center text-primary">Department page</h1>
+    <h1 class="text-center text-info">Department page</h1>
     <hr>
     {% for d in dept %}
     <div class="text-center text-white p-3 my-5 w-50 mx-auto" style="background-color:#5ba68e">
