made some modifications

--- a/tutorail/templates/contact.html
+++ b/tutorail/templates/contact.html
@@ -7,7 +7,7 @@
 {% block body %}
 <section class="container" style="margin-bottom:13rem">
 
-    <div class="container-fluid" style="width:60%">
+    <div class="container-fluid" style="width:65%">
     <!--Section heading-->
     <h1 class="h1-responsive text-info font-weight-bold text-center ">Contact us</h1>
     <!--Section description-->
@@ -74,7 +74,7 @@
             </form>
             <br>
             <div class="text-center text-md-left">
-                <a class="btn btn-primary" onclick="document.getElementById('contact-form').submit();">Send</a>
+                <a class="btn btn-info" onclick="document.getElementById('contact-form').submit();">Send</a>
             </div>
             <div class="status"></div>
         </div>
