--- a/tutorail/templates/booking.html
+++ b/tutorail/templates/booking.html
@@ -13,7 +13,7 @@
             {% csrf_token %}
             {{form|crispy}}
             <br>
-            <button class="btn btn-primary mb-4" type="submit" onclick="alert('Booking Confirmed')">Submit</button>
+            <button class="btn btn-info mb-4" type="submit" onclick="alert('Booking Confirmed')">Submit</button>
             <br>
         </form>
     </div>
