--- a/tutorail/templates/department.html
+++ b/tutorail/templates/department.html
@@ -8,7 +8,7 @@
     <h1 class="text-center text-info">Department page</h1>
     <hr>
     {% for d in dept %}
-    <div class="text-center text-white p-3 my-5 w-50 mx-auto" style="background-color:#5ba68e">
+    <div class="container text-center text-white p-3 my-5 mx-auto" style="width:65%;background-color:#5ba68e">
         <h2>{{d.dept_name}}</h2>
         <p>{{d.dept_description}}</p>
     </div>
