--- a/tutorail/templates/department.html
+++ b/tutorail/templates/department.html
@@ -10,7 +10,7 @@
     {% for d in dept %}
     <div class="container text-center text-white p-3 my-5 mx-auto" style="width:65%;background-color:#5ba68e">
         <h2>{{d.dept_name}}</h2>
-        <p>{{d.dept_description}}</p>
+        <p style="color:white">{{d.dept_description}}</p>
     </div>
     {% endfor %}
 {% endblock %}
