--- a/tutorail/templates/contact.html
+++ b/tutorail/templates/contact.html
@@ -74,7 +74,7 @@
             </form>
             <br>
             <div class="text-center text-md-left">
-                <a class="btn btn-info" onclick="document.getElementById('contact-form').submit();">Send</a>
+                <a class="btn btn-info" >Send</a>
             </div>
             <div class="status"></div>
         </div>
