--- a/tutorail/templates/base.html
+++ b/tutorail/templates/base.html
@@ -7,6 +7,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <base href="/">
+  <!--Templete inheritence-->
   <title>{% block title %}{% endblock %}</title>
   <link href="//fonts.googleapis.com/css?family=Nunito:400,600,700&display=swap" rel="stylesheet">
   <!-- Template CSS -->
@@ -85,6 +86,7 @@
             <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
               <ul class="navbar-nav mx-lg-auto">
                 <li class="nav-item active">
+                  <!--urls to navigate to every pages through navbar-->
                   <a class="nav-link" href="/">Home <span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item">
@@ -214,6 +216,8 @@
     </div>
   </section>
   <!-- /main-slider -->
+
+  <!--Templete inheritence-->
    {% block body %}
    {% endblock %}
 
